[project]
name = "LitePT"
version = "0.0.0"

dependencies = [
"h5py",
"pyyaml",
"sharedarray",
"tensorboard",
"tensorboardx",
"wandb",
"yapf",
"addict",
"einops",
"scipy",
"plyfile",
"termcolor",
"timm",
"torch-cluster @ https://data.pyg.org/whl/torch-2.11.0%2Bcu126/torch_cluster-1.6.3%2Bpt211cu126-cp312-cp312-linux_x86_64.whl",
"torch-scatter @ https://data.pyg.org/whl/torch-2.11.0%2Bcu126/torch_scatter-2.1.2%2Bpt211cu126-cp312-cp312-linux_x86_64.whl",
"torch-sparse @ https://data.pyg.org/whl/torch-2.11.0%2Bcu126/torch_sparse-0.6.18%2Bpt211cu126-cp312-cp312-linux_x86_64.whl",
"torch-geometric==2.5.3",
"colorhash",
"torchmetrics",
"flash-attn",
"spconv-cu124"
]

[tool.setuptools]
py-modules=['libs', 'litept', 'models', 'configs', 'engines', 'metrics', 'datasets']